Implemented a persistent two-way client-server connection using KMP WebSockets.